# pure-core

./: default.nix  pure-core.cabal
src/Pure/Data/: View.hs
src/Pure/Data/View/: Patterns.hs
