name:                pure-core
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-core
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    containers >= 0.5 && < 0.6,
    pure-default >= 0.7 && < 1,
    pure-json >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    pure-queue >= 0.7 && < 1

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.View
    Pure.Data.View.Patterns

  if (impl(ghcjs))
    build-depends:
      ghcjs-base >= 0.2 && < 0.3

  default-language: Haskell2010