name:                pure-core
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-core
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-default >= 0.7 && < 1,
    pure-json >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    pure-queue >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    containers

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.View
    Pure.Data.View.Patterns

  default-language: Haskell2010