name:                pure-core
version:             0.8.0.0
homepage:            purehs.org/doc/pure-core
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-core.git

library
  build-depends:
    base,
    pure-default,
    pure-json,
    pure-txt,
    pure-queue,
    pure-lifted,
    containers

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.View
    Pure.Data.View.Patterns

  default-language: Haskell2010
